--- a/src/app/users/list/list.component.html
+++ b/src/app/users/list/list.component.html
@@ -1,5 +1,25 @@
-<div class="card-columns">
-
+<div class="row" *ngIf="loading">
+  <div class="col">
+    <div class="alert alert-info text-center">
+      <i class="fa fa-spin fa-2x"></i>
+      <h1>Wait...</h1>
+    </div>
+  </div>
+</div>
+<div class="row" *ngIf="error">
+  <div class="col">
+    <div class="alert alert-danger text-center">
+      <i class="fa fa-times fa-2x"></i>
+      <h1>Error: {{error.status}}</h1>
+      <p>
+        {{error.message}}
+        <br><br>
+        {{error.url}}
+      </p>
+    </div>
+  </div>
+</div>
+<div class="card-columns" *ngIf="!loading">
   <div class="card" *ngFor="let user of users">
     <img [src]="user.avatar" class="card-img-top">
     <div class="card-body">
@@ -7,10 +27,9 @@
       <p class="card-text">This is a longer card with supporting.</p>
       <p class="card-text">
         <span class="text-muted">
-         ID : {{user.id}}
+         ID: {{user.id}}
         </span>
       </p>
     </div>
   </div>
-
 </div>
